# sidica

./: Cargo.toml  README.md
src/: cache.rs  commands.rs  connection.rs  frame.rs  id_generator.rs  main.rs  parse.rs  server.rs
src/commands/: get.rs  set.rs
